--- a/guide/__main.tex
+++ b/guide/__main.tex
@@ -3,6 +3,7 @@
 \usepackage[english]{babel} % automatisch deutsche Bezeichnungen (zB Literatur statt References)
 \usepackage{csquotes}
 \usepackage{minted}
+\usepackage{hyperref}
 % \usemintedstyle{borland}
 % \usemintedstyle{bw} % black and white for printing
 \usepackage{booktabs} % professionelle Tabellen
@@ -18,7 +19,7 @@
 % hier noch beliebige weitere packages einbinden
 
 
-\title{Minimale Masterthesis}
+\title{MicroCT Segmentation Guide for Mice1}
 \author{Stefan Rohrbacher}
 \date{\today}
 
