--- a/guide/Titlepage.tex
+++ b/guide/Titlepage.tex
@@ -13,8 +13,8 @@
 	\begin{center}
 		{\noindent \linespread{1.3} \color{header-blue} \Huge \textbf{\@title} \par }
 		\vspace{5pt}
-		{\noindent\Huge \textbf{MedTech} \par}
-		{\noindent\Huge \textbf{Research Proposal} \par}
+		%{\noindent\Huge \textbf{MedTech} \par}
+		%{\noindent\Huge \textbf{Research Proposal} \par}
 		\vspace{20pt}
 	\end{center}
 	\hspace{-35mm}
@@ -22,12 +22,12 @@
 	\vspace{15pt}
 
 	\tabto{2cm}STUDENT NAME: \tabto{7cm}\textbf{Stefan Rohrbacher} \\
-	%\tabto{2cm}STUDENT ID: \tabto{7cm}\textbf{\matriculationNumber} \\
+	\tabto{2cm}STUDENT ID: \tabto{7cm}\textbf{01607307} \\
 	\tabto{2cm}COURSE NAME: \tabto{7cm}\textbf{MedTech}\\
 	%%\tabto{7cm}\textbf{\institutename}
-	\tabto{7cm}\textbf{MedTech} \\
+	%\tabto{7cm}\textbf{MedTech} \\
 	\vspace{15pt}
-	\tabto{2cm}SUPERVISOR: \tabto{7cm}\textbf{Michael Rauter}
+	\tabto{2cm}SUPERVISOR: \tabto{7cm}\textbf{Dipl. Ing. Michael Rauter}
 	\tabto{2cm}DATE OF SUBMISSION: \tabto{7cm}\textbf{\today}
 
 	\vfill
