--- a/includes/medtec.bib
+++ b/includes/medtec.bib
@@ -2022,12 +2022,12 @@
   author = {Zhang, Xiang and Yao, Lina and Wang, Xianzhi and Monaghan, Jessica and Mcalpine, David and Zhang, Yu},
   date = {2020-10-21},
   eprint = {1905.04149},
-  eprinttype = {arXiv},
+  eprinttype = {arxiv},
   eprintclass = {cs, eess, q-bio},
   url = {http://arxiv.org/abs/1905.04149},
   urldate = {2022-09-28},
   abstract = {Brain-Computer Interface (BCI) bridges the human's neural world and the outer physical world by decoding individuals' brain signals into commands recognizable by computer devices. Deep learning has lifted the performance of brain-computer interface systems significantly in recent years. In this article, we systematically investigate brain signal types for BCI and related deep learning concepts for brain signal analysis. We then present a comprehensive survey of deep learning techniques used for BCI, by summarizing over 230 contributions most published in the past five years. Finally, we discuss the applied areas, opening challenges, and future directions for deep learning-based BCI.},
-  pubstate = {prepublished},
+  pubstate = {preprint},
   keywords = {Computer Science - Human-Computer Interaction,Computer Science - Machine Learning,Electrical Engineering and Systems Science - Signal Processing,Quantitative Biology - Neurons and Cognition},
   file = {/home/ro/Zotero/storage/M45KEXRZ/Zhang et al. - 2020 - A Survey on Deep Learning-based Non-Invasive Brain.pdf;/home/ro/Zotero/storage/N7CTKJWH/1905.html}
 }
